[package]
name = "constitute-git"
version = "0.1.0"
edition = "2024"

[lib]
name = "constitute_git"
path = "src/lib.rs"

[[bin]]
name = "constitute-git"
path = "src/main.rs"

[dependencies]
anyhow = "1"
constitute-fabric = { git = "https://github.com/Aux0x7F/constitute-fabric", branch = "0x/git-project-hardening/fabric-protocol-sync" }
constitute-protocol = { git = "https://github.com/Aux0x7F/constitute-protocol", branch = "0x/git-project-hardening/protocol-operation-posture" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
