[package]
name = "constitute-git"
version = "0.1.0"
edition = "2024"

[lib]
name = "constitute_git"
path = "src/lib.rs"

[[bin]]
name = "constitute-git"
path = "src/main.rs"

[dependencies]
anyhow = "1"
constitute-fabric = { path = "../constitute-fabric" }
constitute-protocol = { path = "../constitute-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch."https://github.com/Aux0x7F/constitute-protocol"]
constitute-protocol = { path = "../constitute-protocol" }
